v16.2/classes/GC.Spread.Sheets.Filter.HideRowFilter.md
# Class: HideRowFilter

[Sheets](../modules/GC.Spread.Sheets.md).[Filter](../modules/GC.Spread.Sheets.Filter.md).HideRowFilter

## Hierarchy

- [`RowFilterBase`](GC.Spread.Sheets.Filter.RowFilterBase.md)

  ↳ **`HideRowFilter`**

## Table of contents

### Constructors

- [constructor](GC.Spread.Sheets.Filter.HideRowFilter.md#constructor)

### Properties

- [extendedRange](GC.Spread.Sheets.Filter.HideRowFilter.md#extendedrange)
- [range](GC.Spread.Sheets.Filter.HideRowFilter.md#range)
- [typeName](GC.Spread.Sheets.Filter.HideRowFilter.md#typename)

### Methods

- [addFilterItem](GC.Spread.Sheets.Filter.HideRowFilter.md#addfilteritem)
- [filter](GC.Spread.Sheets.Filter.HideRowFilter.md#filter)
- [filterButtonVisible](GC.Spread.Sheets.Filter.HideRowFilter.md#filterbuttonvisible)
- [filterDialogVisibleInfo](GC.Spread.Sheets.Filter.HideRowFilter.md#filterdialogvisibleinfo)
- [fromJSON](GC.Spread.Sheets.Filter.HideRowFilter.md#fromjson)
- [getFilterItems](GC.Spread.Sheets.Filter.HideRowFilter.md#getfilteritems)
- [getFilteredItems](GC.Spread.Sheets.Filter.HideRowFilter.md#getfiltereditems)
- [getSortState](GC.Spread.Sheets.Filter.HideRowFilter.md#getsortstate)
- [isFiltered](GC.Spread.Sheets.Filter.HideRowFilter.md#isfiltered)
- [isRowFilteredOut](GC.Spread.Sheets.Filter.HideRowFilter.md#isrowfilteredout)
- [onFilter](GC.Spread.Sheets.Filter.HideRowFilter.md#onfilter)
- [openFilterDialog](GC.Spread.Sheets.Filter.HideRowFilter.md#openfilterdialog)
- [removeFilterItems](GC.Spread.Sheets.Filter.HideRowFilter.md#removefilteritems)
- [reset](GC.Spread.Sheets.Filter.HideRowFilter.md#reset)
- [sortColumn](GC.Spread.Sheets.Filter.HideRowFilter.md#sortcolumn)
- [toJSON](GC.Spread.Sheets.Filter.HideRowFilter.md#tojson)
- [unfilter](GC.Spread.Sheets.Filter.HideRowFilter.md#unfilter)

## Constructors

### <a id="constructor" name="constructor"></a> constructor

• **new HideRowFilter**(`range?`)

默认的行筛选

**`代码示例`**
```
//下面的示例创建一个新的筛选
sheet.rowFilter(new GC.Spread.Sheets.Filter.HideRowFilter(new GC.Spread.Sheets.Range(0,0,4,4)));
sheet.repaint();
```

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `range?` | [`Range`](GC.Spread.Sheets.Range.md) | 筛选区域 |

#### Overrides

[RowFilterBase](GC.Spread.Sheets.Filter.RowFilterBase.md).[constructor](GC.Spread.Sheets.Filter.RowFilterBase.md#constructor)

## Properties

### <a id="extendedrange" name="extendedrange"></a> extendedRange

• **extendedRange**: [`Range`](GC.Spread.Sheets.Range.md)

行筛选的extendedRange

#### Inherited from

[RowFilterBase](GC.Spread.Sheets.Filter.RowFilterBase.md).[extendedRange](GC.Spread.Sheets.Filter.RowFilterBase.md#extendedrange)

___

### <a id="range" name="range"></a> range

• **range**: [`Range`](GC.Spread.Sheets.Range.md)

行筛选的区域

#### Inherited from

[RowFilterBase](GC.Spread.Sheets.Filter.RowFilterBase.md).[range](GC.Spread.Sheets.Filter.RowFilterBase.md#range)

___

### <a id="typename" name="typename"></a> typeName

• **typeName**: `string`

支持序列化的类型名称字符串

#### Inherited from

[RowFilterBase](GC.Spread.Sheets.Filter.RowFilterBase.md).[typeName](GC.Spread.Sheets.Filter.RowFilterBase.md#typename)

## Methods

### <a id="addfilteritem" name="addfilteritem"></a> addFilterItem

▸ **addFilterItem**(`col`, `condition`): `void`

将指定的筛选添加到行筛选

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `col` | `number` | 列索引 |
| `condition` | [`Condition`](GC.Spread.Sheets.ConditionalFormatting.Condition.md) | 要筛选的条件 |

#### Returns

`void`

#### Inherited from

[RowFilterBase](GC.Spread.Sheets.Filter.RowFilterBase.md).[addFilterItem](GC.Spread.Sheets.Filter.RowFilterBase.md#addfilteritem)

___

### <a id="filter" name="filter"></a> filter

▸ **filter**(`col?`): `void`

筛选指定的列

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `col?` | `number` | 要筛选的列的索引;如果省略,则将筛选区域内的所有列 |

#### Returns

`void`

#### Inherited from

[RowFilterBase](GC.Spread.Sheets.Filter.RowFilterBase.md).[filter](GC.Spread.Sheets.Filter.RowFilterBase.md#filter)

___

### <a id="filterbuttonvisible" name="filterbuttonvisible"></a> filterButtonVisible

▸ **filterButtonVisible**(`col?`, `value?`): `any`

获取或设置是否显示表单列的筛选按钮

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `col?` | `number` | 筛选按钮的列索引 |
| `value?` | `boolean` | 是否显示筛选按钮 |

#### Returns

`any`

     没有参数时,如果所有筛选按钮都不可见,返回false,否则返回true
     有一个参数 col 时,如果指定的列筛选按钮不可见,返回false,否则返回true
     一个参数值` GC.Spread.Sheets.Filter.RowFilterBase `将所有筛选按钮设置为可见(true)/ 不可见(false)
     两个参数col,value ` GC.Spread.Sheets.Filter.RowFilterBase `将指定的列筛选按钮设置为可见(true)/ 不可见(false)

#### Inherited from

[RowFilterBase](GC.Spread.Sheets.Filter.RowFilterBase.md).[filterButtonVisible](GC.Spread.Sheets.Filter.RowFilterBase.md#filterbuttonvisible)

___

### <a id="filterdialogvisibleinfo" name="filterdialogvisibleinfo"></a> filterDialogVisibleInfo

▸ **filterDialogVisibleInfo**(`visibleInfo?`): `any`

获取或设置行筛选的可见信息

**`代码示例`**
```
//本示例创建一个行筛选
 sheet.rowFilter(new GC.Spread.Sheets.Filter.HideRowFilter(new GC.Spread.Sheets.Range(1,1,10,3)));
 var filter = sheet.rowFilter();
 filter.filterDialogVisibleInfo({
          sortByValue : false,
          sortByColor : true,
          filterByColor : true,
          filterByValue : true,
          listFilterArea : false
      })
```

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `visibleInfo?` | [`IFilterDialogVisibleInfo`](../interfaces/GC.Spread.Sheets.Filter.IFilterDialogVisibleInfo.md) | 行筛选的可见信息 |

#### Returns

`any`

如果未设置任何值,则筛选对话框可见信息;否则,返回HideRowFilter

___

### <a id="fromjson" name="fromjson"></a> fromJSON

▸ **fromJSON**(`settings`): `void`

从指定的JSON字符串加载对象状态

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `settings` | `Object` | 设置反序列化的行筛选数据 |

#### Returns

`void`

#### Inherited from

[RowFilterBase](GC.Spread.Sheets.Filter.RowFilterBase.md).[fromJSON](GC.Spread.Sheets.Filter.RowFilterBase.md#fromjson)

___

### <a id="getfilteritems" name="getfilteritems"></a> getFilterItems

▸ **getFilterItems**(`col`): [`Condition`](GC.Spread.Sheets.ConditionalFormatting.Condition.md)[]

获取指定列的筛选

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `col` | `number` | 列索引 |

#### Returns

[`Condition`](GC.Spread.Sheets.ConditionalFormatting.Condition.md)[]

返回包含属于指定列的条件的集合

#### Inherited from

[RowFilterBase](GC.Spread.Sheets.Filter.RowFilterBase.md).[getFilterItems](GC.Spread.Sheets.Filter.RowFilterBase.md#getfilteritems)

___

### <a id="getfiltereditems" name="getfiltereditems"></a> getFilteredItems

▸ **getFilteredItems**(): [`Condition`](GC.Spread.Sheets.ConditionalFormatting.Condition.md)[]

获取所有筛选条件

#### Returns

[`Condition`](GC.Spread.Sheets.ConditionalFormatting.Condition.md)[]

返回包含所有筛选条件的集合

#### Inherited from

[RowFilterBase](GC.Spread.Sheets.Filter.RowFilterBase.md).[getFilteredItems](GC.Spread.Sheets.Filter.RowFilterBase.md#getfiltereditems)

___

### <a id="getsortstate" name="getsortstate"></a> getSortState

▸ **getSortState**(`col`): [`SortState`](../enums/GC.Spread.Sheets.SortState.md)

获取当前的排序状态

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `col` | `number` | 列索引 |

#### Returns

[`SortState`](../enums/GC.Spread.Sheets.SortState.md)

当前筛选的排序状态

#### Inherited from

[RowFilterBase](GC.Spread.Sheets.Filter.RowFilterBase.md).[getSortState](GC.Spread.Sheets.Filter.RowFilterBase.md#getsortstate)

___

### <a id="isfiltered" name="isfiltered"></a> isFiltered

▸ **isFiltered**(`col?`): `boolean`

获取一个值,该值是否筛选任何行或指定的列

**`代码示例`**
```
//本示例使用isFiltered方法
activeSheet.setValue(0, 0, "North");
activeSheet.setValue(1, 0, "South");
activeSheet.setValue(2, 0, "East");
activeSheet.setValue(3, 0, "South");
activeSheet.setValue(4, 0, "North");
activeSheet.setValue(5, 0, "North");
activeSheet.setValue(6, 0, "West");
activeSheet.setColumnWidth(0, 80);
//设置一个行筛选
activeSheet.rowFilter(new GC.Spread.Sheets.Filter.HideRowFilter(new GC.Spread.Sheets.Range(0, 0, 7, 1)));
//button
$("#button1").click(function () {
    var rowFilter = spread.getActiveSheet().rowFilter();
    if (rowFilter.isFiltered(0)) {
        alert("Row-filtering executed for Column1");
    } else {
        alert("Row-filtering not executed for Column1");
    }
});
//将按钮控件添加到页面
&lt;input type="button" id="button1" value="button1"/&gt;
```

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `col?` | `number` | 列索引 |

#### Returns

`boolean`

不传参时,如果某些行被筛选,返回true;否则返回false.
                    传一个col参数时,如果指定的列已筛选,返回true;否则为false

#### Inherited from

[RowFilterBase](GC.Spread.Sheets.Filter.RowFilterBase.md).[isFiltered](GC.Spread.Sheets.Filter.RowFilterBase.md#isfiltered)

___

### <a id="isrowfilteredout" name="isrowfilteredout"></a> isRowFilteredOut

▸ **isRowFilteredOut**(`row`): `boolean`

确定是否将指定的行筛选掉

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `row` | `number` | 行索引 |

#### Returns

`boolean`

如果该行被筛选,返回true;否则返回false

#### Inherited from

[RowFilterBase](GC.Spread.Sheets.Filter.RowFilterBase.md).[isRowFilteredOut](GC.Spread.Sheets.Filter.RowFilterBase.md#isrowfilteredout)

___

### <a id="onfilter" name="onfilter"></a> onFilter

▸ **onFilter**(`args`): `void`

当某些列被筛选或未筛选时执行操作

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `args` | [`IFilteredArgs`](../interfaces/GC.Spread.Sheets.Filter.IFilteredArgs.md) | 包含action、sheet、range、filteredRows和filteredOutRows的对象 |

#### Returns

`void`

#### Inherited from

[RowFilterBase](GC.Spread.Sheets.Filter.RowFilterBase.md).[onFilter](GC.Spread.Sheets.Filter.RowFilterBase.md#onfilter)

___

### <a id="openfilterdialog" name="openfilterdialog"></a> openFilterDialog

▸ **openFilterDialog**(`filterButtonHitInfo`): `void`

当用户单击筛选按钮时,打开筛选对话框

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `filterButtonHitInfo` | [`IFilterButtonHitInfo`](../interfaces/GC.Spread.Sheets.IFilterButtonHitInfo.md) | 有关筛选按钮的点击测试信息 |

#### Returns

`void`

#### Inherited from

[RowFilterBase](GC.Spread.Sheets.Filter.RowFilterBase.md).[openFilterDialog](GC.Spread.Sheets.Filter.RowFilterBase.md#openfilterdialog)

___

### <a id="removefilteritems" name="removefilteritems"></a> removeFilterItems

▸ **removeFilterItems**(`col`): `void`

删除指定的筛选

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `col` | `number` | 列索引 |

#### Returns

`void`

#### Inherited from

[RowFilterBase](GC.Spread.Sheets.Filter.RowFilterBase.md).[removeFilterItems](GC.Spread.Sheets.Filter.RowFilterBase.md#removefilteritems)

___

### <a id="reset" name="reset"></a> reset

▸ **reset**(): `void`

清除所有筛选

#### Returns

`void`

#### Inherited from

[RowFilterBase](GC.Spread.Sheets.Filter.RowFilterBase.md).[reset](GC.Spread.Sheets.Filter.RowFilterBase.md#reset)

___

### <a id="sortcolumn" name="sortcolumn"></a> sortColumn

▸ **sortColumn**(`col`, `ascending`): `void`

按指定顺序对指定列进行排序

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `col` | `number` | 列索引 |
| `ascending` | `boolean` | 排序时设置为true为升序 |

#### Returns

`void`

#### Inherited from

[RowFilterBase](GC.Spread.Sheets.Filter.RowFilterBase.md).[sortColumn](GC.Spread.Sheets.Filter.RowFilterBase.md#sortcolumn)

___

### <a id="tojson" name="tojson"></a> toJSON

▸ **toJSON**(): `Object`

将对象状态保存为JSON字符串

#### Returns

`Object`

行筛选数据

#### Inherited from

[RowFilterBase](GC.Spread.Sheets.Filter.RowFilterBase.md).[toJSON](GC.Spread.Sheets.Filter.RowFilterBase.md#tojson)

___

### <a id="unfilter" name="unfilter"></a> unfilter

▸ **unfilter**(`col?`): `void`

从指定的列中删除筛选

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `col?` | `number` | 要删除筛选的列的索引;如果省略,则删除该区域内所有列筛选 |

#### Returns

`void`

#### Inherited from

[RowFilterBase](GC.Spread.Sheets.Filter.RowFilterBase.md).[unfilter](GC.Spread.Sheets.Filter.RowFilterBase.md#unfilter)
